Trying out Laravel Scout for Search using tntsearch driver
