# storage/api-docs/api-docs.json
@@ -120,6 +120,44 @@
                 ]
             }
         },
+        "/api/device/search/{search}": {
+            "get": {
+                "tags": [
+                    "Device"
+                ],
+                "summary": "Get Device by Search",
+                "description": "",
+                "operationId": "",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "search",
+                        "in": "path",
+                        "description": "search",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized user"
+                    }
+                },
+                "security": [
+                    {
+                        "AzureAD": []
+                    }
+                ]
+            }
+        },
         "/api/hello": {
             "get": {
                 "summary": "Hello world test for API troubleshooting",
